<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_homes"
        android:orderInCategory="100"
        android:title="@string/action_homes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_informations"
        android:orderInCategory="100"
        android:title="@string/action_infors"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_layout"
        android:orderInCategory="100"
        android:title="@string/change_layout"
        app:showAsAction="always"
        android:icon="@drawable/grid_gray"/>
</menu>